<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_headlines">


    <fragment
        android:id="@+id/nav_headlines"
        android:name="com.sudheer.dailynewsforu.acitvities.ui.Headlines.HeadLinesFragment"
        android:label="@string/menu_headlines"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.sudheer.dailynewsforu.acitvities.ui.Headlines.HomeSecondFragment"
        android:label="@string/business_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_headlines" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>


    <fragment
        android:id="@+id/nav_business"
        android:name="com.sudheer.dailynewsforu.acitvities.ui.home.HomeFragment"
        android:label="@string/menu_business"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_entertainment"
        android:name="com.sudheer.dailynewsforu.acitvities.ui.gallery.GalleryFragment"
        android:label="@string/menu_Entertainment"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_health"
        android:name="com.sudheer.dailynewsforu.acitvities.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_technology"
        tools:layout="@layout/fragment_slideshow" />


</navigation>